Travis CI | f1d9957 static files regenerated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="intro">
 	<h2><a href="./">Go за Прикладом</a></h2>
 
-	<p class="worning">Work in Progress / Сайт в процесі розробки</p>
+	<p class="warning">Work in Progress / Сайт в процесі розробки</p>
 
 	<p>
 		<a href="http://golang.org">Go</a> є мовою програмування з відкритим кодом призначена для створення простого, швидкого та надійного програмного забезпечення.
@@ -142,7 +142,7 @@
 		
 		<li><a href="base64-encoding" >Кодування Base64</a></li>
 		
-		<li><a href="reading-files" >Reading Files</a></li>
+		<li><a href="reading-files" >Читання файлів</a></li>
 		
 		<li><a href="writing-files" >Writing Files</a></li>
 		
