Travis CI | b877e5f Writing Files translation added

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		
 		<li><a href="reading-files" >Читання файлів</a></li>
 		
-		<li><a href="writing-files" >Writing Files</a></li>
+		<li><a href="writing-files" >Запис файлів</a></li>
 		
 		<li><a href="line-filters" >Рядкові Фільтри</a></li>
 		
