Travis CI | 7e6415e pre finish line

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 		
 		<li><a href="for" >Цикл For</a></li>
 		
-		<li><a href="if-else" >Розгалуження Умови - Якщо/Інакше (If/Else)</a></li>
+		<li><a href="if-else" >Оператори Розгалуження - Якщо/Інакше (If/Else)</a></li>
 		
-		<li><a href="switch" >Розгалуження Умови - Перемикач (Switch)</a></li>
+		<li><a href="switch" >Оператори Розгалуження - Перемикач (Switch)</a></li>
 		
 		<li><a href="arrays" >Масиви (Arrays)</a></li>
 		
@@ -72,7 +72,7 @@
 		
 		<li><a href="errors" >Помилки</a></li>
 		
-		<li><a href="goroutines" >Goroutines</a></li>
+		<li><a href="goroutines" >Грутини</a></li>
 		
 		<li><a href="channels" >Канали</a></li>
 		
@@ -152,11 +152,11 @@
 		
 		<li><a href="command-line-flags" >Командний Рядок - Прапорці</a></li>
 		
-		<li><a href="environment-variables" >Environment Variables</a></li>
+		<li><a href="environment-variables" >Змінні оточення</a></li>
 		
-		<li><a href="spawning-processes" >Spawning Processes</a></li>
+		<li><a href="spawning-processes" >Запуск сторонніх процесів</a></li>
 		
-		<li><a href="execing-processes" >Exec'ing Processes</a></li>
+		<li><a href="execing-processes" >Заміна поточного процесу новим</a></li>
 		
 		<li><a href="signals" >Signals</a></li>
 		
