Travis CI | 6dc685e Spelling

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		
 		<li><a href="execing-processes" >Заміна поточного процесу новим</a></li>
 		
-		<li><a href="signals" >Signals</a></li>
+		<li><a href="signals" >Сигнали</a></li>
 		
 		<li><a href="exit" >Exit</a></li>
 		
