Travis CI | 8d59f22 Spelling Errors #7

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		
 		<li><a href="errors" >Помилки</a></li>
 		
-		<li><a href="goroutines" >Грутини</a></li>
+		<li><a href="goroutines" >Горутини</a></li>
 		
 		<li><a href="channels" >Канали</a></li>
 		
