Travis CI | 162ac6f Merge pull request #9 from fedir/patch-6

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 
 	<ul>
 		
-		<li><a href="hello-world" >Привіт Світе</a></li>
+		<li><a href="hello-world" >Привіт Світе (Hello World)</a></li>
 		
-		<li><a href="values" >Значення</a></li>
+		<li><a href="values" >Значення (Values)</a></li>
 		
-		<li><a href="variables" >Змінні</a></li>
+		<li><a href="variables" >Змінні (Variables)</a></li>
 		
-		<li><a href="constants" >Константи</a></li>
+		<li><a href="constants" >Константи (Constants)</a></li>
 		
-		<li><a href="for" >Цикл For</a></li>
+		<li><a href="for" >Цикли (For)</a></li>
 		
 		<li><a href="if-else" >Оператори Розгалуження - Якщо/Інакше (If/Else)</a></li>
 		
@@ -48,35 +48,35 @@
 		
 		<li><a href="slices" >Зрізи (Slices)</a></li>
 		
-		<li><a href="maps" >Мапи</a></li>
+		<li><a href="maps" >Мапи (Maps)</a></li>
 		
 		<li><a href="range" >Діапазон (Range)</a></li>
 		
-		<li><a href="functions" >Функції</a></li>
+		<li><a href="functions" >Функції (Functions)</a></li>
 		
-		<li><a href="multiple-return-values" >Поверненння Кількох Значень</a></li>
+		<li><a href="multiple-return-values" >Поверненння Кількох Значень (Multiple Return Values)</a></li>
 		
-		<li><a href="variadic-functions" >Варіативні Функції</a></li>
+		<li><a href="variadic-functions" >Варіативні Функції (Variadic Functions)</a></li>
 		
-		<li><a href="closures" >Замикання</a></li>
+		<li><a href="closures" >Замикання (Closures)</a></li>
 		
-		<li><a href="recursion" >Рекурсія</a></li>
+		<li><a href="recursion" >Рекурсія (Recursion)</a></li>
 		
-		<li><a href="pointers" >Вказівники</a></li>
+		<li><a href="pointers" >Вказівники (Pointers)</a></li>
 		
-		<li><a href="structs" >Структури</a></li>
+		<li><a href="structs" >Структури (Structs)</a></li>
 		
-		<li><a href="methods" >Методи</a></li>
+		<li><a href="methods" >Методи (Methods)</a></li>
 		
-		<li><a href="interfaces" >Інтерфейси</a></li>
+		<li><a href="interfaces" >Інтерфейси (Interfaces)</a></li>
 		
-		<li><a href="errors" >Помилки</a></li>
+		<li><a href="errors" >Помилки (Errors)</a></li>
 		
-		<li><a href="goroutines" >Горутини</a></li>
+		<li><a href="goroutines" >Горутини (Goroutines)</a></li>
 		
-		<li><a href="channels" >Канали</a></li>
+		<li><a href="channels" >Канали (Channels)</a></li>
 		
-		<li><a href="channel-buffering" >Буферизація Каналу</a></li>
+		<li><a href="channel-buffering" >Буферизація каналiв (Channel Buffering)</a></li>
 		
 		<li><a href="channel-synchronization" >Синзронізація Каналу</a></li>
 		
@@ -84,7 +84,7 @@
 		
 		<li><a href="select" >Select</a></li>
 		
-		<li><a href="timeouts" >Тайм-аути</a></li>
+		<li><a href="timeouts" >Тайм-аути (Timeouts)</a></li>
 		
 		<li><a href="non-blocking-channel-operations" >Не Блокуючі Операції на Каналах</a></li>
 		
