Travis CI | 5260c0b Merge pull request #10 from Romanches/ukrainian

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		
 		<li><a href="channel-buffering" >Буферизація каналiв (Channel Buffering)</a></li>
 		
-		<li><a href="channel-synchronization" >Синзронізація Каналу</a></li>
+		<li><a href="channel-synchronization" >Синхронізація каналу</a></li>
 		
 		<li><a href="channel-directions" >Напрямки каналу</a></li>
 		
