--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		
 		<li><a href="command-line-flags" >Командний Рядок - Прапорці</a></li>
 		
-		<li><a href="environment-variables" >Змінні оточення</a></li>
+		<li><a href="environment-variables" >Змінні середовища</a></li>
 		
 		<li><a href="spawning-processes" >Запуск сторонніх процесів</a></li>
 		
