Travis CI | 51f82f9 tools: local test server (nginx in docker)

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 		
 		<li><a href="range-over-channels" >Діапазон (Range) з Каналами</a></li>
 		
-		<li><a href="timers" >Таймери</a></li>
+		<li><a href="timers" >Хронометри (Timers)</a></li>
 		
-		<li><a href="tickers" >Маятники</a></li>
+		<li><a href="tickers" >Маятники (Tickers)</a></li>
 		
 		<li><a href="worker-pools" >Worker Pools</a></li>
 		
